--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.28"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.1"
   }
 }
