--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@playwright/test": "^1.52.0",
-    "@types/node": "^22.15.28"
+    "@types/node": "^22.15.28",
+    "eslint": "^9.32.0",
+    "globals": "^16.3.0"
   },
   "dependencies": {
     "dotenv": "^17.2.1"
