--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@playwright/test": "^1.52.0",
+    "@stylistic/eslint-plugin": "^5.2.2",
     "@types/node": "^22.15.28",
     "eslint": "^9.32.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.3.0"
   },
   "dependencies": {
