--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "globals": "^16.3.0"
   },
   "dependencies": {
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "playwright": "^1.54.1"
   },
   "type": "module"
 }
